# recycled_ptr

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
example/: memory_leak.cpp  memory_tree.cpp  test.cpp
include/: recycled_ptr.hpp
include/recycled_ptr/: basic_ptr.hpp  basic_tpptr.hpp  memory_pool.h  memory_pool.hpp  ptr_tracker.hpp  recycled_block.h  recycled_block.hpp  recycled_ptr.h  recycled_ptr.hpp  root_ptr.hpp  tracked_allocator_traits.hpp  tracked_ptr.hpp  types.h  types.hpp
include/recycled_ptr/internal/: basic_ptr.hpp  recycled_ptr.hpp  root_ptr.hpp  tracked_allocator_traits.hpp  tracked_ptr.hpp
include/recycled_ptr/tpp/: basic_tpptr.tpp  memory_pool.tpp  recycled_block.tpp  recycled_ptr.tpp  root_ptr.tpp  tracked_allocator_traits.tpp
src/: basic_ptr.cpp  garbage_collect.cpp  memory_pool.cpp  ptr_tracker.cpp  tracked_ptr.cpp
